--- a/Student_Management/Student_Management/Student_Management.csproj
+++ b/Student_Management/Student_Management/Student_Management.csproj
@@ -115,6 +115,7 @@
     <Compile Include="RegisterForm.Designer.cs">
       <DependentUpon>RegisterForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="StudentClass.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
