--- a/Student_Management/Student_Management/Student_Management.csproj
+++ b/Student_Management/Student_Management/Student_Management.csproj
@@ -86,6 +86,7 @@
     </Reference>
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mobile" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -113,6 +114,12 @@
     <Compile Include="MSForm.Designer.cs">
       <DependentUpon>MSForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PrintStdForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PrintStdForm.Designer.cs">
+      <DependentUpon>PrintStdForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegisterForm.cs">
@@ -127,6 +134,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MSForm.resx">
       <DependentUpon>MSForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PrintStdForm.resx">
+      <DependentUpon>PrintStdForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
