--- a/Student_Management/Student_Management/Student_Management.csproj
+++ b/Student_Management/Student_Management/Student_Management.csproj
@@ -101,12 +101,32 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Course.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Course.Designer.cs">
+      <DependentUpon>Course.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CourseClass.cs" />
+    <Compile Include="CoursePrintForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CoursePrintForm.Designer.cs">
+      <DependentUpon>CoursePrintForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DBConnect.cs" />
+    <Compile Include="DGVPrinter.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ManageCourse.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManageCourse.Designer.cs">
+      <DependentUpon>ManageCourse.cs</DependentUpon>
     </Compile>
     <Compile Include="MSForm.cs">
       <SubType>Form</SubType>
@@ -129,8 +149,17 @@
       <DependentUpon>RegisterForm.cs</DependentUpon>
     </Compile>
     <Compile Include="StudentClass.cs" />
+    <EmbeddedResource Include="Course.resx">
+      <DependentUpon>Course.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CoursePrintForm.resx">
+      <DependentUpon>CoursePrintForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ManageCourse.resx">
+      <DependentUpon>ManageCourse.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MSForm.resx">
       <DependentUpon>MSForm.cs</DependentUpon>
@@ -152,6 +181,7 @@
       <DependentUpon>RegisterForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\DBConnect.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
